--- a/colors.css
+++ b/colors.css
@@ -11,7 +11,7 @@ body {
 .contact {
     font-family: "zapfino", "luminari", "Academy Engraved Let";
     position:absolute;
-    bottom:10px;
+    bottom:25px;
 }
 
 .contact a {
@@ -30,18 +30,6 @@ body {
     left:45px;
 }
 
-#second {
-    position:absolute;
-    top:130px;
-    left:175px;    
-}
-
-#third {
-    position:absolute;
-    bottom:45px;
-    right:45px
-}
-
 main {
     align-items:center;
     background-color:black;
@@ -51,7 +39,12 @@ main {
     justify-content:center;
 }
 
+#second {
+    position:absolute;
+}
+
 .sign {
+    align-items: center;
     background-color:black;
     border-bottom: 0;
     border-color: #151b54;
@@ -59,8 +52,10 @@ main {
     border-style: solid;
     box-shadow: 0px 0px 3px 3px #250517;
     color: steelblue;
+    display:flex;
     font-family: "Lobster";
     font-size: 30px;
+    justify-content: center;
     min-height:300px;
     min-width: 400px;
     position:absolute;
@@ -73,29 +68,33 @@ main {
     text-shadow: 3px 3px 3px #6a287e;
 }
 
+#third {
+    position:absolute;
+    bottom:45px;
+    right:45px
+}
+
 
 @media (max-width: 550px) {
 
     #first {
         position:absolute;
-        top:25px;
-        left:25px;
+        top:15%;
+        left:auto
     }
     
     #second {
         position:absolute;
-        top:80px;
-        left:85px;    
+    }
+    
+    .sign {
+        min-width:300px;
+        min-height:300px;
     }
     
     #third {
         position:absolute;
-        bottom:25px;
-        right:25px
-    }
-
-    .sign {
-        min-width:200px;
-        min-height:200px;
+        bottom:15%;
+        right:auto;
     }
 }
