--- a/colors.css
+++ b/colors.css
@@ -43,15 +43,15 @@ main {
     position:absolute;
 }
 
-.sign {
+.center {
     align-items: center;
-    background-color:black;
+    background-color:white;
     border-bottom: 0;
     border-color: #151b54;
     border-radius: 15px;
     border-style: solid;
     box-shadow: 0px 0px 3px 3px #250517;
-    color: steelblue;
+    color: black;
     display:flex;
     font-family: "Lobster";
     font-size: 30px;
@@ -61,10 +61,10 @@ main {
     position:absolute;
 }
 
-.sign:hover {
+.center:hover {
     border-color: #2b3856;
     box-shadow: 0px 0px 5px 5px #7e587e;
-    color: cyan;
+    color: white;
     text-shadow: 3px 3px 3px #6a287e;
 }
 
@@ -87,7 +87,7 @@ main {
         position:absolute;
     }
     
-    .sign {
+    .center {
         min-width:300px;
         min-height:300px;
     }
