--- a/colors.css
+++ b/colors.css
@@ -53,11 +53,12 @@ main {
     box-shadow: 0px 0px 3px 3px #250517;
     color: black;
     display:flex;
-    font-family: "Lobster";
+    font-family: "herculanum", "papyrus", "marker felt", "comic sans ms";
     font-size: 30px;
+    font-weight:bolder;
     justify-content: center;
     min-height:300px;
-    min-width: 400px;
+    min-width: 450px;
     position:absolute;
 }
 
@@ -88,8 +89,8 @@ main {
     }
     
     .center {
-        min-width:300px;
-        min-height:300px;
+        min-width:365px;
+        min-height:250px;
     }
     
     #third {
