--- a/colors.css
+++ b/colors.css
@@ -55,7 +55,7 @@ body {
     bottom:-60px;
 }
 
-.lower-forward-horizontal {
+.lower-plus-horizontal {
     background-color:black;
     border-radius: 10px;
     height:5px;
@@ -64,7 +64,7 @@ body {
     position:absolute;
 }
 
-.lower-forward-vertical {
+.lower-plus-vertical {
     background-color:black;
     border-radius: 10px;
     height:5px;
@@ -93,7 +93,7 @@ body {
     width:50%;
 }
 
-.lower-rewind {
+.lower-minus {
     background-color:black;
     border-radius: 10px;
     height:5px;
@@ -134,7 +134,7 @@ main {
     top:-60px;
 }
 
-.upper-forward-horizontal {
+.upper-plus-horizontal {
     background-color:black;
     border-radius: 10px;
     height:5px;
@@ -143,7 +143,7 @@ main {
     position:absolute;
 }
 
-.upper-forward-vertical {
+.upper-plus-vertical {
     background-color:black;
     border-radius: 10px;
     height:5px;
@@ -173,7 +173,7 @@ main {
     text-align: center;
 }
 
-.upper-rewind {
+.upper-minus {
     background-color:black;
     border-radius: 10px;
     height:5px;
